--- a/src/pages/QuanLyVe/QuanLyVe.css
+++ b/src/pages/QuanLyVe/QuanLyVe.css
@@ -18,27 +18,37 @@
 
 .box {
     padding-right: 20px;
-    width: 20%;
-    height: 20%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .box_loc_ve {
-    color: rgb(255, 184, 0, 1);
-    border: 1px solid rgb(255, 184, 0, 1);
+    color: #ff993b;
+    border: 1px solid #ff993b;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px;
+    cursor: pointer;
+    display: flex;
+    gap: 5px;
+}
+
+.box_xuat_file {
+    color: #ff993b;
+    border: 1px solid #ff993b;
     padding: 10px;
     border-radius: 5px;
     margin: 10px;
     cursor: pointer;
 }
 
-.box_xuat_file {
-    color: rgb(255, 184, 0, 1);
-    border: 1px solid rgb(255, 184, 0, 1);
-    padding: 10px;
-    border-radius: 5px;
-    margin: 10px;
-    cursor: pointer;
+.box_loc_ve:hover,
+.box_xuat_file:hover {
+    background-color: #ff993b;
+    color: #fff;
+}
+.funnel:hover {
+    background-color: #fff;
+    color: #fff;
 }
