--- a/src/pages/TrangChu/TrangChu.css
+++ b/src/pages/TrangChu/TrangChu.css
@@ -13,20 +13,96 @@
 .doanhthu {
     padding-left: 10px;
 }
-.lich {
+.lich,
+.lich_bottom {
+    gap: 3px;
+    display: flex;
     padding: 5px;
     cursor: pointer;
-    border: 1px solid;
+    border: 1px solid #e6e0e0;
     border-radius: 5px;
 }
+.text_lich {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 22px;
+    color: #1e0d03;
+    opacity: 0.78;
+}
+
 .chart_Line {
-    width: 100%;
-    height: 200px;
+    width: 700px;
+    height: 300px;
     padding-left: 10px;
 }
-.lich_bottom {
-    width: 120px;
-    cursor: pointer;
-    border: 1px solid;
-    border-radius: 5px;
+
+.sodoanhthu {
+    display: flex;
+    width: 100%;
+    padding: 3px 0px 20px 0px;
+}
+.so {
+    width: 144px;
+    height: 30px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+}
+.donvi {
+    padding-left: 5px;
+    padding-top: 2px;
+}
+
+.text_chart_pie_top {
+    width: 100%;
+    margin-top: 10px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 22px;
+    color: #1e0d03;
+
+    opacity: 0.5;
+}
+.text_chart_pie {
+    display: flex;
+}
+
+.text_pie_left,
+.text_pie_right,
+.h3 {
+    padding-left: 250px;
+    margin-top: 8px;
+}
+.pie {
+    display: flex;
+    margin-top: 20px;
+    gap: 172px;
+    padding-left: 345px;
+}
+.text_note {
+    padding-left: 25px;
+}
+.note_1,
+.note2 {
+    display: flex;
+    gap: 5px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+
+    color: #1e0d03;
+}
+
+.pie_left,
+.pie_right {
+    width: 200px;
+    height: 200px;
 }
