--- a/src/component/Menu/Menu.scss
+++ b/src/component/Menu/Menu.scss
@@ -55,5 +55,13 @@
   .menu_footer {
     margin-left: 28px;
     padding-top: 550px;
+    p {
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      color: #1e0d03;
+      opacity: 0.5;
+    }
   }
 }
